# codeburn

./: .gitignore  CHANGELOG.md
.agent/: codeguard-state.json
.github/workflows/: publish-npm.yml  release-desktop-linux.yml
desktop/: .gitignore  DEVELOPMENT.md  package-lock.json  package.json  tokens.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: cli.rs  config.rs  fx.rs  lib.rs  main.rs
desktop/src/lib/: currency.ts
extensions/gnome-shell/: README.md
extensions/gnome-shell/codeburn@agentseal.org/: extension.js  metadata.json  stylesheet.css
mac/: README.md
mac/Sources/CodeBurnMenubar/Data/: UpdateChecker.swift
mac/Sources/CodeBurnMenubar/Views/: HeatmapSection.swift  MenuBarContent.swift
src/: cli.ts  compare.tsx  dashboard.tsx  export.ts  menubar-installer.ts  menubar.ts  models.ts  optimize.ts  parser.ts
src/providers/: claude.ts  codex.ts  index.ts  types.ts
tests/: compare-stats.test.ts  provider-registry.test.ts
tests/providers/: codex.test.ts
