[package]
name = "codeburn-desktop"
version = "0.1.0"
description = "CodeBurn menubar / tray app for Linux and Windows"
authors = ["AgentSeal"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "codeburn_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "time", "sync"] }
thiserror = "1"
anyhow = "1"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[features]
default = ["custom-protocol"]
# This feature is used for production builds or when a dev server is not specified. Don't
# change it unless you know what you're doing.
custom-protocol = ["tauri/custom-protocol"]
